<resources>
    <string name="app_name">NOSOmobile</string>

    <string name="sharedpref_netstate_lastblock">LASTBLOCKLONG_SAVE_KEY</string>
    <string name="sharedpref_netstate_lastbranch">LASTBRANCH_SAVE_KEY</string>
    <string name="sharedpref_pop_address">POP_SERVICE_ADDRESS</string>
    <string name="sharedpref_pop_password">POP_SERVICE_PASSWORD</string>

    <string name="general_done">Done</string>
    <string name="general_add">Add</string>
    <string name="general_back">Back</string>
    <string name="general_copytoclip">Copied to clipboard</string>

    <string name="general_export_success">All wallets exported correctly</string>
    <string name="general_export_cancelled"></string>
    <string name="general_export_error">Error exporting wallet</string>

    <string name="general_import_error_1">Invalid file extension or no wallets found</string>
    <string name="general_import_error_2">Invalid file extension found</string>
    <string name="general_import_error_3">Import cancelled</string>
    <string name="general_import_start">Imported </string>
    <string name="general_import_end_single">new wallet correctly</string>
    <string name="general_import_end_multi">new wallets correctly</string>
    <string name="general_import_nonew_wallet">File content 0 new wallets</string>

    <string name="general_create_success">New wallet created with 0 balance</string>

    <string name="general_sendfunds_error0">Select an address from the list to send the noso</string>
    <string name="general_sendfunds_error1">Destination cannot be empty</string>
    <string name="general_sendfunds_error2">Invalid destination address</string>
    <string name="general_sendfunds_error3">Cannot send funds FROM and TO the same address</string>
    <string name="general_sendfunds_error4">Invalid amount to send</string>
    <string name="general_sendfunds_error5">Not enough funds in the available balance</string>
    <string name="general_sendfunds_success">Order placed and sent to the Main Net</string>
    <string name="general_sendfunds_error_sync">Error, wallet is not synchronized</string>
    <string name="general_sendfunds_amount_err">Not enough balance on this address alone</string>
    <string name="general_sendfunds_error_conn">Connection error, retrying in 10 seconds</string>

    <string name="general_send_funds_title">Send funds</string>
    <string name="general_send_funds_to">Destination: </string>
    <string name="general_send_funds_from">From: </string>
    <string name="general_send_funds_amount">Amount: </string>
    <string name="general_send_funds_ref">Reference: </string>
    <string name="general_send_funds_useall">Send from all</string>
    <string name="general_send_funds_clean">Clear</string>
    <string name="general_send_funds_send">Send</string>
    <string name="general_send_funds_send_confirm">Confirm</string>
    <string name="general_send_funds_cancel">Cancel</string>
    <string name="general_send_funds_close">Close</string>

    <string name="settings_title">Connection Settings</string>
    <string name="settings_server_label">Server List</string>
    <string name="settings_address_input_label">Address: </string>
    <string name="settings_port_input_label">Port: </string>
    <string name="settings_new_server_title">Add new server address</string>
    <string name="settings_new_server_error">Invalid IP address or Port</string>

    <string name="wallet_grand_balance">Available Balance</string>
    <string name="wallet_address_label">Address</string>
    <string name="wallet_incoming_balance">Incoming</string>
    <string name="wallet_outgoing_balance">Outgoing</string>
    <string name="wallet_address_balance">Balance</string>

    <string name="wallet_actions_label">Wallet Actions</string>
    <string name="wallet_actions_import">Import</string>
    <string name="wallet_actions_export">Export</string>
    <string name="wallet_actions_create">New</string>

    <string name="import_wallet_title">Import Wallet</string>
    <string name="import_wallet_from_file">From File</string>
    <string name="import_wallet_from_qr">From QR</string>
    <string name="import_wallet_from_qr_prompt">Place the camera in front of the QR generated by the desktop wallet</string>

    <string name="qr_address_dialog_title">Address QR code</string>
    <string name="qr_orderid_dialog_title">OrderID QR code</string>

    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_customize">Customize</string>
    <string name="menu_action_copy">Copy OrderID</string>
    <string name="menu_action_history">Order History</string>
    <string name="menu_action_return">Return to Address List</string>

    <string name="delete_dialog_title">Delete address</string>
    <string name="delete_dialog_target">Target</string>
    <string name="delete_dialog_delete">Delete</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="delete_dialog_disclaimer">
        This will delete the address, if you don\'t have a backup
        there is no way to recover it.
    </string>
    <string name="delete_dialog_error1">You cannot delete the only address in the wallet</string>

    <string name="customize_error_1">Address has already a custom name</string>
    <string name="customize_error_2">Invalid custom name, required length should be between 5 to 40 chars</string>
    <string name="customize_error_3">Invalid custom name, cannot be a valid address</string>
    <string name="customize_error_4">Not enough funds to customize</string>
    <string name="customize_error_5">Custom name already is already in used, choose something different</string>

    <string name="history_order_">No order records to show</string>
    <string name="history_order_empty_alert">No order records to show</string>
    <string name="history_order_label">OrderID</string>
    <string name="history_order_destination">Destination</string>
    <string name="history_order_amount">Amount</string>

    <string name="dialog_lock_title">Lock System</string>
    <string name="menu_action_lock">Lock</string>
    <string name="menu_action_unlock">Unlock</string>
    <string name="dialog_lock_enter_password">Enter Password</string>
    <string name="dialog_lock_confirm_password">Confirm Password</string>
    <string name="dialog_unlock_failed">Failed to unlock, wrong password?</string>
    <string name="dialog_lock_failed_psswd_match">Failed to lock, password mismatch</string>
    <string name="dialog_lock_failed_psswd_empty">Password can\'t be empty</string>
    <string name="title_activity_dummy_composable">DummyComposable</string>
    <string name="general_send_funds_to_placeholder">Select an address from the list</string>
    <string name="wallet_outgoing_timestamp">Date/Time</string>

</resources>
