<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_lock_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:background="@drawable/background_corner_rounded"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_lock_title"
        android:textColor="@color/colorChatBlack"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/background_corner_rounded_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:text="@string/dialog_lock_enter_password"/>

        <EditText
            android:id="@+id/dialog_lock_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_sendfunds_input_text_size"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:paddingVertical="@dimen/main_sendfunds_input_vpadding"
            android:paddingHorizontal="@dimen/main_sendfunds_input_hpadding"
            android:layout_marginLeft="@dimen/main_sendfunds_label_left_margin"
            android:inputType="textPassword"
            android:maxLines="2"
            android:imeOptions="actionNext"
            android:background="@drawable/background_corner_rounded"/>

        <TextView
            android:id="@+id/dialog_label_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:text="@string/dialog_lock_confirm_password"/>

        <EditText
            android:id="@+id/dialog_lock_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_sendfunds_input_text_size"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:paddingVertical="@dimen/main_sendfunds_input_vpadding"
            android:paddingHorizontal="@dimen/main_sendfunds_input_hpadding"
            android:layout_marginLeft="@dimen/main_sendfunds_label_left_margin"
            android:inputType="textPassword"
            android:maxLines="2"
            android:imeOptions="actionDone"
            android:background="@drawable/background_corner_rounded"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_lock_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/delete_dialog_cancel"/>
        <Button
            android:id="@+id/dialog_lock_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/menu_action_lock"/>
    </LinearLayout>
</LinearLayout>