<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_corner_rounded"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="@color/colorChatBlack"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:text="@string/settings_server_label"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_server_list"
            android:background="@drawable/background_corner_rounded_white"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"/>
        <ScrollView
            android:id="@+id/settings_add_server_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingVertical="10dp"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:background="@drawable/background_corner_rounded_white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/settings_new_server_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/settings_address_input_label"/>
                    <EditText
                        android:id="@+id/settings_add_server_address_input"
                        android:background="@drawable/background_corner_rounded"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="127.0.0.1"
                        android:textColorHint="@color/colorGrayIntense"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="10dp"
                        android:inputType="number|numberDecimal"
                        android:digits="0123456789."
                        android:imeOptions="actionNext"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/settings_port_input_label"
                        />
                    <EditText
                        android:id="@+id/settings_add_server_port_input"
                        android:background="@drawable/background_corner_rounded"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="8080"
                        android:textColorHint="@color/colorGrayIntense"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="10dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <Button
                        android:id="@+id/settings_add_server_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/walletStyle"
                        android:text="@string/general_back"/>
                    <Button
                        android:id="@+id/settings_add_server_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/walletStyle"
                        android:text="@string/general_add"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/settings_add_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_baseline_add_box_24"/>
            <ImageButton
                android:id="@+id/settings_delete_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_baseline_indeterminate_check_box_24"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>