<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_corner_rounded_white_actionable">

    <LinearLayout
        android:id="@+id/history_order_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorChatBlack"
                        android:textSize="@dimen/wallet_row_labels"
                        android:text="@string/history_order_label"
                        />
                    <TextView
                        android:id="@+id/history_order_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/wallet_row_address"
                        android:text="ORDER asjdflasdf 234234 11 1000"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical">
                    <ImageButton
                        android:id="@+id/history_order_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_corner_rounded_darkgray"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_content_copy_24"/>
                    <ImageButton
                        android:id="@+id/history_order_qr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/background_corner_rounded_darkgray"
                        android:padding="3dp"
                        android:src="@drawable/ic_qricon_18"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:gravity="center_vertical|left"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorChatBlack"
                    android:textSize="@dimen/wallet_row_labels"
                    android:text="@string/history_order_destination"/>
                <TextView
                    android:id="@+id/history_order_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/wallet_row_number_text"
                    android:textColor="@color/black"
                    android:text="N278a9s7df8as7f7fas8dddf7as9df"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorChatBlack"
                    android:textSize="@dimen/wallet_row_labels"
                    android:text="@string/history_order_amount"/>
                <TextView
                    android:id="@+id/history_order_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/wallet_row_number_text"
                    android:text="0.00000000"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>